--- a/Epitech.Epicture/Epitech.Epicture.csproj
+++ b/Epitech.Epicture/Epitech.Epicture.csproj
@@ -31,8 +31,13 @@
     <Compile Include="Epitech.Epicture.cs" />
     <Compile Include="Model\ImgurApiResponse.cs" />
     <Compile Include="Model\ImgurGaleryAsset.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ImgurClientService.cs" />
+    <Compile Include="ViewModels\Core\ViewModelBase.cs" />
+    <Compile Include="ViewModels\GalleryViewModel.cs" />
+    <Compile Include="Views\CellsView\ImageCellView.cs" />
+    <Compile Include="Views\Core\ContentPageBase.cs" />
     <Compile Include="Views\GaleryView.cs" />
   </ItemGroup>
   <ItemGroup>
