--- a/iOS/Epitech.Epicture.iOS.csproj
+++ b/iOS/Epitech.Epicture.iOS.csproj
@@ -129,6 +129,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\RichImage.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
   </ItemGroup>
