--- a/Epitech.Epicture/Epitech.Epicture.csproj
+++ b/Epitech.Epicture/Epitech.Epicture.csproj
@@ -33,11 +33,15 @@
     <Compile Include="Epitech.Epicture.cs" />
     <Compile Include="Model\Core\ImgurApiResponse.cs" />
     <Compile Include="Model\Core\ImgurBaseModel.cs" />
+    <Compile Include="Model\ImgurAuthorisation.cs" />
     <Compile Include="Model\ImgurComment.cs" />
     <Compile Include="Model\ImgurGaleryAsset.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Core\ImgurBaseClient.cs" />
     <Compile Include="Services\ImgurClientService.cs" />
+    <Compile Include="Services\ImgurOauthIdentityProvider.cs" />
+    <Compile Include="ValueConverters\StartedToAssetValueConverter.cs" />
     <Compile Include="ViewModels\Core\ViewModelBase.cs" />
     <Compile Include="ViewModels\GalleryViewModel.cs" />
     <Compile Include="ViewModels\ImageDetailViewModel.cs" />
@@ -82,6 +86,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\Contracts\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Ressources\star_filled.png" />
+    <EmbeddedResource Include="Ressources\star_empty.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.3.193\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.3.193\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
