--- a/Epitech.Epicture/packages.config
+++ b/Epitech.Epicture/packages.config
@@ -8,5 +8,6 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Splat" version="2.0.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xam.Plugins.Settings" version="2.5.4" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.3.193" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
