Abstracted lots of stuff. Ready for Flickr to mess it all.

--- a/Epitech.Epicture/Epitech.Epicture.csproj
+++ b/Epitech.Epicture/Epitech.Epicture.csproj
@@ -42,15 +42,16 @@
     <Compile Include="Model\ImgurGaleryAsset.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Contracts\IBaseClient.cs" />
     <Compile Include="Services\Contracts\IImageClientService.cs" />
-    <Compile Include="Services\Core\ImgurBaseClient.cs" />
-    <Compile Include="Services\ImgurClientService.cs" />
-    <Compile Include="Services\ImgurOauthIdentityProvider.cs" />
+    <Compile Include="Services\Contracts\IOAuthIdentityProvider.cs" />
+    <Compile Include="Services\Imgur\Core\ImgurBaseClient.cs" />
+    <Compile Include="Services\Imgur\ImgurClientService.cs" />
+    <Compile Include="Services\Imgur\ImgurOauthIdentityProvider.cs" />
     <Compile Include="ValueConverters\StartedToAssetValueConverter.cs" />
     <Compile Include="ViewModels\Core\ViewModelBase.cs" />
     <Compile Include="ViewModels\GalleryViewModel.cs" />
     <Compile Include="ViewModels\ImageDetailViewModel.cs" />
-    <Compile Include="Views\CellsView\ImageCellView.cs" />
     <Compile Include="Views\Controls\RichImage.cs" />
     <Compile Include="Views\Core\ContentPageBase.cs" />
     <Compile Include="Views\GaleryView.cs" />
