Flickr API sucks, as expected

--- a/Epitech.Epicture/Epitech.Epicture.csproj
+++ b/Epitech.Epicture/Epitech.Epicture.csproj
@@ -34,17 +34,24 @@
     <Compile Include="Helpers\Settings.cs" />
     <Compile Include="Model\Contract\IAssetComment.cs" />
     <Compile Include="Model\Contract\IImageAsset.cs" />
-    <Compile Include="Model\Core\Contract\IAsset.cs" />
-    <Compile Include="Model\Core\ImgurApiResponse.cs" />
-    <Compile Include="Model\Core\ImgurBaseModel.cs" />
-    <Compile Include="Model\ImgurAuthorisation.cs" />
-    <Compile Include="Model\ImgurComment.cs" />
-    <Compile Include="Model\ImgurGaleryAsset.cs" />
+    <Compile Include="Model\Contract\IAsset.cs" />
+    <Compile Include="Model\Flickr\Core\FlickrApiResponse.cs" />
+    <Compile Include="Model\Flickr\Core\FlickrBaseModel.cs" />
+    <Compile Include="Model\Flickr\FlickrAssetSource.cs" />
+    <Compile Include="Model\Flickr\FlickrComment.cs" />
+    <Compile Include="Model\Flickr\FlickrGaleryAsset.cs" />
+    <Compile Include="Model\Imgur\Core\ImgurApiResponse.cs" />
+    <Compile Include="Model\Imgur\Core\ImgurBaseModel.cs" />
+    <Compile Include="Model\Imgur\ImgurAuthorisation.cs" />
+    <Compile Include="Model\Imgur\ImgurComment.cs" />
+    <Compile Include="Model\Imgur\ImgurGaleryAsset.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Contracts\IBaseClient.cs" />
     <Compile Include="Services\Contracts\IImageClientService.cs" />
     <Compile Include="Services\Contracts\IOAuthIdentityProvider.cs" />
+    <Compile Include="Services\Flickr\Core\FlickrBaseClient.cs" />
+    <Compile Include="Services\Flickr\FlickrClientService.cs" />
     <Compile Include="Services\Imgur\Core\ImgurBaseClient.cs" />
     <Compile Include="Services\Imgur\ImgurClientService.cs" />
     <Compile Include="Services\Imgur\ImgurOauthIdentityProvider.cs" />
