--- a/Epitech.Epicture.UWP/project.json
+++ b/Epitech.Epicture.UWP/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.0",
+    "Newtonsoft.Json": "9.0.1",
     "Xam.Plugin.Media": "2.6.2",
     "Xam.Plugins.Settings": "2.5.4",
     "Xamarin.Forms": "2.3.3.193"
